<resources>
    <string name="app_name">Dermoscan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="strWelcomeMessage">Welcome to Dermoscan</string>
    <string name="second_fragment">second fragment</string>
    <string name="third_fragment">© 2021 - Dermoscan Inc.</string>
    <string name="strWelcomeSub">Get started by creating a new scan.</string>
    <string name="strBlogHeaderSub">Get the latest on the advancement in skin cancer research</string>
    <string name="strRecentScansHeaderSub">Your most recent scans</string>
    <string name="strNewScan">Scan Image</string>
    <string name="strLaunchCamera">Camera</string>
    <string name="strImageDescription">View for displaying image</string>
    <string name="test">Hello</string>
    <string name="strOpenGallery">Gallery</string>
    <string name="strDiagnose">Diagnose</string>
    <string name="strAboutDesc">Skin cancer lesion diagnosis</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="strAbout">About</string>
    <string name="strViewSettings">View Settings</string>
    <string name="strBlogHeader">Dermoscan Blog</string>
    <string name="strRecentScansHeader">Recent Scans</string>
    <string name="strResultRCNN">RCCN:</string>
    <string name="strResultResNet50">ResNet50:</string>

    <string name="blog_1">
        It is a long established fact that a reader will be distracted by the readable content of a
        page when looking at its layout. The point of using Lorem Ipsum is that it has a
        more-or-less normal distribution of letters, as opposed to using \'Content here,
        content here\', making it look like readable English. Many desktop publishing packages and
        web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem
        ipsum\' will uncover many web sites still in their infancy. Various versions have evolved
        over the years, sometimes by accident, sometimes on purpose (injected humour and the like).

        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece
        of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock,
        a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure
        Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the
        word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from
        sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and
        Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very
        popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit
        amet..", comes from a line in section 1.10.32.

        It is a long established fact that a reader will be distracted by the readable content of a
        page when looking at its layout. The point of using Lorem Ipsum is that it has a
        more-or-less normal distribution of letters, as opposed to using \'Content here,
        content here\', making it look like readable English. Many desktop publishing packages and
        web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem
        ipsum\' will uncover many web sites still in their infancy. Various versions have evolved
        over the years, sometimes by accident, sometimes on purpose (injected humour and the like).

        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece
        of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock,
        a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure
        Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the
        word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from
        sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and
        Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very
        popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit
        amet..", comes from a line in section 1.10.32.

        It is a long established fact that a reader will be distracted by the readable content of a
        page when looking at its layout. The point of using Lorem Ipsum is that it has a
        more-or-less normal distribution of letters, as opposed to using \'Content here,
        content here\', making it look like readable English. Many desktop publishing packages and
        web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem
        ipsum\' will uncover many web sites still in their infancy. Various versions have evolved
        over the years, sometimes by accident, sometimes on purpose (injected humour and the like).

        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece
        of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock,
        a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure
        Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the
        word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from
        sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and
        Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very
        popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit
        amet..", comes from a line in section 1.10.32.
    </string>
    <string name="strBlogDetailTitle">Blog Title</string>
    <string name="strAllScans">View All</string>
    <string name="strFabCamera">Floating Camera Fab</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="small_title">Small Title</string>
    <string name="small_text">Small Text</string>
    <string name="scan_text">Scan Text</string>
    <string name="warning_text">
        Note: These results are for research purposes and are not to be taken as medical advice. Please make sure to get second opinion from a qualified medical professional. All the models used for this particular prediction were trained on over 1000 dermoscopic images
    </string>
    <string name="resnet50_text">
        According to this model, the image is 60% malignant. This means you mole could be cancerous and potentially dangerous. Make sure to see a doctor as soon as possible.
        This model achieve an accuracy of 80% during training. To learn more about this model checkout the Dermoscan blog or click here.
    </string>
    <string name="rcnn_text">
        According to this model, the image is 60% malignant. This means you mole could be cancerous and potentially dangerous. Make sure to see a doctor as soon as possible.
        This model achieve an accuracy of 80% during training. To learn more about this model checkout the Dermoscan blog or click here.
    </string>
    <string name="inception_text">
        According to this model, the image is 60% malignant. This means you mole could be cancerous and potentially dangerous. Make sure to see a doctor as soon as possible.
        This model achieve an accuracy of 80% during training. To learn more about this model checkout the Dermoscan blog or click here.
    </string>
    <string name="xception_text">
        According to this model, the image is 60% malignant. This means you mole could be cancerous and potentially dangerous. Make sure to see a doctor as soon as possible.
        This model achieve an accuracy of 80% during training. To learn more about this model checkout the Dermoscan blog or click here.
    </string>
    <string name="vgg16_text">
        According to this model, the image is 60% malignant. This means you mole could be cancerous and potentially dangerous. Make sure to see a doctor as soon as possible.
        This model achieve an accuracy of 80% during training. To learn more about this model checkout the Dermoscan blog or click here.
    </string>
    <string name="mobile_net_text">
        According to this model, the image is 60% malignant. This means you mole could be cancerous and potentially dangerous. Make sure to see a doctor as soon as possible.
        This model achieve an accuracy of 80% during training. To learn more about this model checkout the Dermoscan blog or click here.
    </string>

    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="go_to_all_scans">Go to All Scans</string>
    <string name="strRCNN">RCNN</string>
    <string name="strResNet50">ResNet50</string>
    <string name="strInception">Inception</string>
    <string name="strXception">Xception</string>
    <string name="strVGG16">VGG16</string>
    <string name="strMobileNet">MobileNet</string>


</resources>