<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.example.dermoscan.widget.Accordion
        android:id="@+id/accordionCard"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:text="@string/small_text"
        app:confidenceText="@string/app_name"
        app:textColor="@android:color/darker_gray"
        app:textSize="16sp"
        app:title="@string/small_title"
        app:confidenceSize="18sp"
        app:titleColor="@android:color/black"
        app:titleSize="18sp" />

</androidx.constraintlayout.widget.ConstraintLayout>