<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivScanImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/strImageDescription"
        android:scaleType="centerCrop"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundCorner" />


    <TextView
        android:id="@+id/tvScanResultRCNN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/strResultRCNN"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/ivScanImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvScanResultResNet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/strResultResNet50"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/ivScanImage"
        app:layout_constraintTop_toBottomOf="@+id/tvScanResultRCNN" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/underline"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="99dp" />


</androidx.constraintlayout.widget.ConstraintLayout>