<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BlogDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvBlogDetailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="24dp"
                android:padding="16dp"
                android:text="@string/strBlogDetailTitle"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivBlogDetailImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strImageDescription"
                android:scaleType="centerCrop"
                android:src="@drawable/blog1"
                app:layout_constraintBaseline_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBlogDetailTitle"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/tvBlogArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blog_1"
                android:textSize="14sp"
                android:lineSpacingExtra="6sp"
                android:textColor="@color/black"
                android:paddingRight="12dp"
                android:paddingLeft="12dp"
                android:paddingTop="16dp"
                android:paddingBottom="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivBlogDetailImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>